# CocktailBotHAL

./: .gitignore  API.yaml  Cargo.toml  README.md  main.rs
src/: api.rs  cocktail.rs  cocktailor.rs  main.rs  thecocktaildb.rs
src/hal/: mod.rs
src/import/: mod.rs  social-coctail.rs
src/server/: mod.rs
