[package]
name = "cocktail_bot_hal"
version = "0.1.0"
authors = ["crjeder <crjeder@gmail.com>"]
edition = "2021"

[dependencies]
generic_cocktail = {path = "../generic-cocktail", version = "0.1"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"   # serialize json for drink recepies
#regex = "1.5"
#rgb = "0.8"
#taplo = "0.5.1" # for config files
#zbar-rust = "0.0.16" # QRcode
#reqwest = {version = "0.11", features = ["json", "blocking"]} # dependeny for roy
#tokio = {version = "1", features = ["full"]} # dependeny for reqwest
#tokio-test = "0.4"
#embedded-hal-mock = "0.7.2" # fake hal
#log = "0.4.14" # for logging
#stderrlog = "0.5.1" # to implement logging
#quick-error = "2.0" # for custom errors
rocket = "0.4"  # for the REST interface
# axum? looks easy to use. -> web server
# test it using HTTP mocking via wiremock:
# https://www.lpalmieri.com/posts/how-to-write-a-rest-client-in-rust-with-reqwest-and-wiremock/#http-mocking-with-wiremock
serde_derive = "1.0" # for rocket
rocket_contrib = {version = "0.4.11", features = ["json"]}
# UI?
# slint = "1.0.0"

[dev-dependencies]
#test-case = "3.2"
